# agents_team

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: codex.py  health.py  projects.py  workflows.py
backend/app/models/: dto.py
backend/app/services/: codex.py  projects.py  runtime.py  workflow_agent_sessions.py  workflow_artifact_paths.py  workflow_backend_codex_delegate.py  workflow_backend_planner.py  workflow_backend_reporter.py  workflow_backend_research.py  workflow_backend_reviewer.py  workflow_backend_runtime.py  workflow_backend_verify.py  workflow_context_audit.py  workflow_context_audits.py  workflow_context_gateway.py  workflow_context_policy.py  workflow_contracts.py  workflow_control_db.py  workflow_memory.py  workflow_reuse.py  workflow_run_artifacts.py  workflow_run_execution.py  workflow_run_queue.py  workflow_run_steps.py  workflow_run_store.py  workflow_runs.py  workflows.py
backend/tests/: conftest.py  test_runtime.py  test_workflow_runs.py  test_workflows.py
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  i18n.tsx  styles.css  types.ts
frontend/src/components/: ArtifactDocumentViewer.tsx  BuildStage.tsx  DiagnosticsStage.tsx  ProjectStage.tsx  RunStage.tsx  TraceLogViewer.tsx  runStageAdapters.ts
scripts/: dev_launcher.py
